CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

include_directories(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/hummingbird/src)
include_directories(.)

set(HUMMINGBIRD_LZ4_INCLUDES
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/lz4/lib"
    CACHE STRING "HUMMINGBIRD_LZ4_INCLUDES" FORCE)
    
set(HUMMINGBIRD_HIREDIS_INCLUDES
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/hiredis"
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/hiredis"
    CACHE STRING "HUMMINGBIRD_HIREDIS_INCLUDES" FORCE)
    
set(HUMMINGBIRD_MONGOC_INCLUDES
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/mongo/install/mongoc"
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/mongo/install/bson"
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/mongo/src/libbson/src/bson"
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/mongo/src/libmongoc/src/mongoc"
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/mongo/src/libbson/src"
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/mongo/src/libmongoc/src"
    CACHE STRING "HUMMINGBIRD_MONGOC_INCLUDES" FORCE)
    
set(HUMMINGBIRD_LIBEVENT_INCLUDES
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/libevent/include"
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/libevent/include"
    CACHE STRING "HUMMINGBIRD_LIBEVENT_INCLUDES" FORCE)

set(HUMMINGBIRD_JSON_INCLUDES
    "${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/json/src"
    "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/json/src"
    CACHE STRING "HUMMINGBIRD_JSON_INCLUDES" FORCE)

ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/hummingbird ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/hummingbird)

ADD_SUBDIRECTORY(hb_economics)
ADD_SUBDIRECTORY(hb_events)
ADD_SUBDIRECTORY(hb_leaderboard)
ADD_SUBDIRECTORY(hb_matching)
ADD_SUBDIRECTORY(hb_messages)
ADD_SUBDIRECTORY(hb_script)

ADD_SUBDIRECTORY(hb_grid)