CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

OPTION(LUNACAT_DEPENDENCE_ZLIB "LUNACAT_DEPENDENCE_ZLIB" ON)
OPTION(LUNACAT_DEPENDENCE_OPENSSL "LUNACAT_DEPENDENCE_OPENSSL" ON)
OPTION(LUNACAT_DEPENDENCE_MONGO "LUNACAT_DEPENDENCE_MONGO" ON)
OPTION(LUNACAT_DEPENDENCE_LUA "LUNACAT_DEPENDENCE_LUA" ON)
OPTION(LUNACAT_DEPENDENCE_LZ4 "LUNACAT_DEPENDENCE_LZ4" ON)
OPTION(LUNACAT_DEPENDENCE_LIBEVENT "LUNACAT_DEPENDENCE_LIBEVENT" ON)
OPTION(LUNACAT_DEPENDENCE_JSON "LUNACAT_DEPENDENCE_JSON" ON)
OPTION(LUNACAT_DEPENDENCE_HIREDIS "LUNACAT_DEPENDENCE_HIREDIS" ON)
OPTION(LUNACAT_DEPENDENCE_HUMMINGBIRD "LUNACAT_DEPENDENCE_HUMMINGBIRD" ON)

PROJECT(dependencies)

SET(LUNACAT_BUILD_TYPE_DEBUG OFF)
SET(LUNACAT_BUILD_TYPE_RELWITHDEBINFO OFF)
SET(LUNACAT_BUILD_TYPE_RELEASE OFF)

IF(CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(LUNACAT_BUILD_TYPE_DEBUG ON)
ELSEIF(CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
    SET(LUNACAT_BUILD_TYPE_RELWITHDEBINFO ON)
ELSEIF(CMAKE_BUILD_TYPE MATCHES "Release")
    SET(LUNACAT_BUILD_TYPE_RELEASE ON)
ELSE()
    MESSAGE(FATAL_ERROR "Non support build type: ${CMAKE_BUILD_TYPE}")
ENDIF()

if(LUNACAT_DEPENDENCE_ZLIB)
    message("================zlib================")
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/CMakeLists.txt ${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/zlib/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/zlib ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/zlib)
    
    set(ZLIB_LIBRARY zlib CACHE STRING "ZLIB_LIBRARY" FORCE)
    set(ZLIB_INCLUDE_DIR "${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/zlib" CACHE STRING "ZLIB_INCLUDE_DIR" FORCE)
endif()

if(LUNACAT_DEPENDENCE_OPENSSL)
    message("================openssl================")
    
    set(WITH_APPS OFF CACHE BOOL "WITH_APPS" FORCE)
    set(MSVC_DYNAMIC_RUNTIME OFF CACHE BOOL "MSVC_DYNAMIC_RUNTIME" FORCE)
    
    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/openssl ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/openssl)
    
    set(OPENSSL_ROOT_DIR ${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/openssl CACHE STRING "OPENSSL_ROOT_DIR" FORCE)
    set(OPENSSL_SSL_LIBRARIES ${LUNACAT_DEPENDENCIES_LIBRARY_DIRECTORY} CACHE STRING "OPENSSL_SSL_LIBRARIES" FORCE)
    set(OPENSSL_SSL_LIBRARY ${OPENSSL_SSL_LIBRARIES} CACHE STRING "OPENSSL_SSL_LIBRARY" FORCE)
    set(OPENSSL_CRYPTO_LIBRARIES ${LUNACAT_DEPENDENCIES_LIBRARY_DIRECTORY} CACHE STRING "OPENSSL_CRYPTO_LIBRARIES" FORCE)
    set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_CRYPTO_LIBRARIES} CACHE STRING "OPENSSL_CRYPTO_LIBRARY" FORCE)
    set(OPENSSL_LIBDIR ${LUNACAT_DEPENDENCIES_LIBRARY_DIRECTORY} CACHE STRING "OPENSSL_LIBDIR" FORCE)
    set(OPENSSL_LIBRARIES libssl.a libcrypto.a CACHE STRING "OPENSSL_LIBRARIES" FORCE)
    set(OPENSSL_INCLUDE_DIRS ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/openssl/include ${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/openssl/include CACHE STRING "OPENSSL_INCLUDE_DIRS" FORCE)
    set(OPENSSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIRS} CACHE STRING "OPENSSL_INCLUDE_DIR" FORCE)
    set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "OPENSSL_USE_STATIC_LIBS" FORCE)
    
    message("OPENSSL_ROOT_DIR: ${OPENSSL_ROOT_DIR}")
    message("OPENSSL_SSL_LIBRARIES: ${OPENSSL_SSL_LIBRARIES}")
    message("OPENSSL_CRYPTO_LIBRARIES: ${OPENSSL_CRYPTO_LIBRARIES}")
    message("OPENSSL_LIBDIR: ${OPENSSL_LIBDIR}")
    message("OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
    message("OPENSSL_INCLUDE_DIRS: ${OPENSSL_INCLUDE_DIRS}")
    message("OPENSSL_USE_STATIC_LIBS: ${OPENSSL_USE_STATIC_LIBS}")
endif()

#dependencies json
if(LUNACAT_DEPENDENCE_JSON)
    message("================json================")

    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/json ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/json)
endif()

#dependencies libevent
if(LUNACAT_DEPENDENCE_LIBEVENT)
    message("================libevent================")
    
    SET(EVENT__LIBRARY_TYPE STATIC CACHE STRING "EVENT__LIBRARY_TYPE" FORCE)
    
    if(LUNACAT_BUILD_TYPE_DEBUG)
        SET(EVENT__DISABLE_DEBUG_MODE OFF CACHE BOOL "EVENT__DISABLE_DEBUG_MODE" FORCE)
    else()
        SET(EVENT__DISABLE_DEBUG_MODE ON CACHE BOOL "EVENT__DISABLE_DEBUG_MODE" FORCE)
    endif()
    
    if(LUNACAT_DEPENDENCE_OPENSSL)
        SET(EVENT__DISABLE_OPENSSL OFF CACHE BOOL "EVENT__DISABLE_OPENSSL" FORCE)
    else()
        SET(EVENT__DISABLE_OPENSSL ON CACHE BOOL "EVENT__DISABLE_OPENSSL" FORCE)
    endif()
    
    SET(EVENT__DISABLE_BENCHMARK ON CACHE BOOL "EVENT__DISABLE_BENCHMARK" FORCE)
    SET(EVENT__DISABLE_TESTS ON CACHE BOOL "EVENT__DISABLE_TESTS" FORCE)
    SET(EVENT__DISABLE_REGRESS ON CACHE BOOL "EVENT__DISABLE_REGRESS" FORCE)
    SET(EVENT__DISABLE_SAMPLES ON CACHE BOOL "EVENT__DISABLE_SAMPLES" FORCE)

    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/libevent ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/libevent)
endif()

#dependencies mongo
if(LUNACAT_DEPENDENCE_MONGO)
    message("================mongo================")
    
    SET(ENABLE_TESTS OFF CACHE BOOL "ENABLE_TESTS" FORCE)
    SET(ENABLE_EXAMPLES OFF CACHE BOOL "ENABLE_EXAMPLES" FORCE)
    SET(ENABLE_MAINTAINER_FLAGS OFF CACHE BOOL "ENABLE_MAINTAINER_FLAGS" FORCE)
    SET(ENABLE_AUTOMATIC_INIT_AND_CLEANUP ON CACHE BOOL "ENABLE_AUTOMATIC_INIT_AND_CLEANUP" FORCE)
    SET(ENABLE_CRYPTO_SYSTEM_PROFILE OFF CACHE BOOL "ENABLE_CRYPTO_SYSTEM_PROFILE" FORCE)
    SET(ENABLE_TRACING OFF CACHE BOOL "ENABLE_TRACING" FORCE)
    SET(ENABLE_COVERAGE OFF CACHE BOOL "ENABLE_COVERAGE" FORCE)
    SET(ENABLE_MAN_PAGES OFF CACHE BOOL "ENABLE_MAN_PAGES" FORCE)
    SET(ENABLE_HTML_DOCS OFF CACHE BOOL "ENABLE_HTML_DOCS" FORCE)
    SET(ENABLE_EXTRA_ALIGNMENT ON CACHE BOOL "ENABLE_EXTRA_ALIGNMENT" FORCE)
    SET(ENABLE_RDTSCP OFF CACHE BOOL "ENABLE_RDTSCP" FORCE)
    SET(ENABLE_APPLE_FRAMEWORK OFF CACHE BOOL "ENABLE_APPLE_FRAMEWORK" FORCE)
    SET(ENABLE_UNINSTALL OFF CACHE BOOL "ENABLE_UNINSTALL" FORCE)
    SET(ENABLE_SSL "AUTO" CACHE STRING "ENABLE_SSL" FORCE)
    SET(ENABLE_SASL OFF CACHE BOOL "ENABLE_SASL" FORCE)
    SET(ENABLE_ZLIB BUNDLED CACHE BOOL "ENABLE_ZLIB" FORCE) 
    SET(ENABLE_ZSTD OFF CACHE BOOL "ENABLE_ZSTD" FORCE)
    SET(ENABLE_SNAPPY OFF CACHE BOOL "ENABLE_SNAPPY" FORCE)
    SET(ENABLE_ICU OFF CACHE BOOL "ENABLE_ICU" FORCE)
    
    SET(ENABLE_STATIC "ON" CACHE STRING "Build static libmongoc. Set to ON/AUTO/OFF, default AUTO." FORCE)
        
    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/mongo ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/mongo)
endif()

#dependencies hiredis
if(LUNACAT_DEPENDENCE_HIREDIS)
    message("================hiredis================")
    
    SET(ENABLE_SSL OFF CACHE BOOL "ENABLE_SSL" FORCE)
    SET(DISABLE_TESTS ON CACHE BOOL "DISABLE_TESTS" FORCE)
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/hiredis/CMakeLists.txt ${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/hiredis/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/hiredis ${LUNACAT_DEPENDENCIES_CONFIG_OUTPUT_DIRECTORY}/hiredis)
endif()

#dependencies lua
if(LUNACAT_DEPENDENCE_LUA)
    message("================lua================")
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/lua/linit.c ${LUNACAT_DEPENDENCIES_SOURCE_DIRECTORY}/lua/linit.c COPYONLY)
    
    ADD_SUBDIRECTORY(lua)
endif()

#dependencies lz4
if(LUNACAT_DEPENDENCE_LZ4)
    message("================lz4================")
    
    ADD_SUBDIRECTORY(lz4)
endif()

#dependencies hummingbird
if(LUNACAT_DEPENDENCE_HUMMINGBIRD)
    message("================hummingbird================")
    

endif()