CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(dependencies_xcode)

INCLUDE(../base_template.cmake)
INCLUDE(../xcode_template.cmake)

SET(LUNACAT_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(LUNACAT_DEPENDENCIES_DIRECTORY ${LUNACAT_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LUNACAT_ARCHIVE_OUTPUT_DIRECTORY})

SET(LUNACAT_DEPENDENCIES_TEMP_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../dependencies ${LUNACAT_DEPENDENCIES_TEMP_DIRECTORY})